# src/main/kotlin/com/iulia/gardener/controller/GrowingConfigurationsController.kt
@@ -1,17 +1,22 @@
 package com.iulia.gardener.controller
 
-import com.iulia.gardener.service.impl.GrowingConfigurationDtoService
+import com.iulia.gardener.integration.impl.GrowingConfigurationDtoService
 import org.openapitools.gardener.api.GrowingConfigsApi
 import org.openapitools.gardener.model.GrowingConfigurationDto
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Controller
+import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.web.bind.annotation.RequestParam
 import java.util.*
+import javax.validation.Valid
+import javax.validation.constraints.NotNull
 
 @Controller
 class GrowingConfigurationsController(var service: GrowingConfigurationDtoService): GrowingConfigsApi {
 
-    override fun deleteGrowingConfiguration(id: UUID): ResponseEntity<Unit> {
+    override fun deleteGrowingConfiguration(@PathVariable(value = "id") id: UUID, @NotNull @RequestParam(required = true, value = "userToken") userToken: String): ResponseEntity<Unit> {
         service.delete(id)
         return ResponseEntity(HttpStatus.OK)
     }
@@ -29,7 +34,7 @@ class GrowingConfigurationsController(var service: GrowingConfigurationDtoServic
         return ResponseEntity(results, HttpStatus.OK)
     }
 
-    override fun postGrowingConfiguration(growingConfigurationDto: GrowingConfigurationDto): ResponseEntity<GrowingConfigurationDto> {
+    override fun postGrowingConfiguration(@NotNull @RequestParam(required = true, value = "userToken") userToken: String, @Valid @RequestBody growingConfigurationDto: GrowingConfigurationDto): ResponseEntity<GrowingConfigurationDto> {
         var updated = service.save(growingConfigurationDto)
         return ResponseEntity(updated, HttpStatus.OK)
     }
